--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,3 +23,4 @@ jobs:
             - ~/.lein
           key: doit-{{ checksum "project.clj"}}
       - run: lein test
+      - run: lein doo phantom test once
